--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 .progress-line-fill {
     height: 4px;
     width: 0%;
-    background-color: #00BC7D;
+    background-color: #1D5E2F;
     border-radius: 4px;
     transition: width .4s ease;
     z-index: 0;
@@ -81,7 +81,7 @@
 .icon-selected {
     width: 60px !important;
     height: 60px !important;
-    background-color: #00BC7D !important;
+    background-color: #1D5E2F !important;
     border: none !important;
 }
 
@@ -97,7 +97,7 @@
 #btnPrev,
 #btnNext {
     padding: 12px 25px;
-    background: #009966;
+    background: #1D5E2F;
     color: #fff;
     border: none;
     border-radius: 6px;
@@ -118,7 +118,7 @@
 .icon-completed {
     width: 60px !important;
     height: 60px !important;
-    background-color: #00BC7D !important;
+    background-color: #1D5E2F !important;
     border: none !important;
 }
 
@@ -225,7 +225,7 @@
 .next-step-btn,
 .submit-internacional {
     padding: 12px;
-    background: #9810FA;
+    background: #1D5E2F;
     color: #fff;
     border: none;
     border-radius: 8px;
@@ -400,25 +400,13 @@
 }
 
 /* cores específicas por aba ativa */
-.tab-item.active[data-tab="0"] {
-  background: linear-gradient(90deg,#05d09c,#009f6b); /* Dados Gerais */
+.tab-item.active {
+  background-color: #1D5E2F;
+  color: #fff;
+  border: none;
 }
 
-.tab-item.active[data-tab="1"] {
-  background-color: #9810FA; /* Contatos */
-}
 
-.tab-item.active[data-tab="2"] {
-  background-color: #F54900; /* Contatos Fin. */
-}
-
-.tab-item.active[data-tab="3"] {
-  background-color: #00A6F4; /* Referências */
-}
-
-.tab-item.active[data-tab="4"] {
-  background-color: #00A63E; /* Bancário */
-}
 
 .tab-content {
   padding: 15px;
@@ -463,7 +451,7 @@
 .add-contact-btn {
     width: 250px;
     margin: 0 auto;
-    background: #F54900;
+    background: #1D5E2F;
     color: white;
     border: none;
     padding: 10px 14px;
@@ -491,4 +479,91 @@
     position: absolute;
     right: -30px;
     top: 22px;
+}
+
+
+/* DOCUMENTOS */
+
+.doc-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 18px;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.doc-card {
+    border: 1px solid #E2E8F0;
+    border-radius: 12px;
+    padding: 16px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    text-align: left;
+}
+
+.doc-info h4 {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 600;
+    
+}
+
+.doc-info p {
+    color: #6B7280;
+    font-size: 14px;
+}
+
+.required {
+    color: #FB2C36;
+}
+
+.upload-box {
+    width: 92%;
+    padding: 6px;
+    border: 1px solid #D1D5DB;
+    border-radius: 8px;
+    cursor: pointer;
+    text-align: center;
+    color: #374151;
+    background: #F9FAFB;
+}
+
+.upload-box:hover {
+    background: #F1F5F9;
+}
+
+.file-input {
+    display: none;
+}
+
+.upload-status {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 14px;
+}
+
+.status-icon {
+    font-size: 13px;
+}
+
+.checkbox-label {
+    font-size: 14px;
+    display: flex;
+    align-items: top;
+    gap: 8px;
+}
+
+.input-checkbox {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+}
+
+.select-input option:hover {
+    border-color: #1D5E2F;
+    box-shadow: 0 0 0 2px rgba(29, 94, 47, 0.20);
+    transition: 0.25s ease;
 }
