--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    color: #99A1AF;
+    font-size: 20px;
 }
 
 .icons-step-content img {
@@ -83,12 +85,13 @@
     height: 60px !important;
     background-color: #1D5E2F !important;
     border: none !important;
+    color: white;
 }
 
 .steps-buttons {
     width: 800px;    
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     gap: 20px;
     margin: 0 auto;
     margin-top: 40px;
@@ -96,7 +99,7 @@
 
 #btnPrev,
 #btnNext {
-    padding: 12px 25px;
+    padding: 11px 40px;
     background: #1D5E2F;
     color: #fff;
     border: none;
@@ -108,7 +111,6 @@
 #btnPrev {
     background: transparent;
     color: #0A0A0A;
-    border: 1px solid #E2E8F0;
 }
 
 #btnPrev.hidden {
@@ -120,6 +122,7 @@
     height: 60px !important;
     background-color: #1D5E2F !important;
     border: none !important;
+    color: white;
 }
 
 .icon-completed img {
@@ -127,9 +130,9 @@
 }
 
 .icon-completed::after {
-    content: "✓";
+    /* content: "✓"; */
     position: absolute;
-    color: white;
+    color: white !important;
     font-size: 22px;
     font-weight: bold;
 }
@@ -138,7 +141,7 @@
 /* ------------------ */
 
 .steps-content {
-    max-width: 1200px;
+    max-width: 850px;
     margin: auto;
     padding: 20px;
     padding-top: 30px;
@@ -379,31 +382,22 @@
 .tab-item {
   flex: 1;
   padding: 15px;
-  border: 1px solid #d8d8d8;
   border-radius: 8px;
   text-align: center;
   cursor: default;
-  background: #fff;
   transition: .3s;
   font-weight: 500;
   color: #333;
 }
 
-.tab-item.active {
+.tab-item.active {  
+  color: #1D5E2F;
+  font-weight: 600;
   
-  color: white;
-  border: none;
 }
 
-.tab-item.active {
-  background-color: #1D5E2F;
-  color: #fff;
-  border: none;
-}
-
-.tab-item.completed {
-  background: #1D5E2F;
-  color: #fff;
+.tab-item.completed {  
+  color: #1D5E2F;
 }
 
 .tab-content {
@@ -418,6 +412,13 @@
 
 .tab-panel.active {
   display: block;
+}
+
+.tab-buttons{
+   display: flex;
+    gap: 20px;
+    justify-content: right;
+    margin-right: 25px; 
 }
 
 #nextTab, #prevTab {
@@ -591,4 +592,15 @@
 
 .success-msg{
     text-align: left;
+}
+
+/* Mudança de botões - alteração diego */
+
+.btn-next-ajuste-bancario {
+    margin-top: -40px;
+}
+
+.prev-tab-ajuste-bancario {
+    margin-right: 170px;
+    margin-bottom: -40px;
 }
